created latest block list, update styles, add favicon and logo

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Vue Build</title>
+    <title>Lisk Block Explorer</title>
+    <script src="https://gitcdn.xyz/repo/LiskHQ/lisk-js/master/dist/lisk-js.js"></script>
   </head>
   <body>
     <div id="app"></div>
